--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,3 @@
-DATABASE_URI=potgresql://user:password@localhost:5432/dbname
+DATABASE_URI=postgres://user:password@localhost:5432/dbname
+PORT=3000
+JWT_SECRET=YOUR_SECRET
