--- a/package.json
+++ b/package.json
@@ -4,12 +4,18 @@
   "description": "ShelfWise is a library management system",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node dist/index.js",
+    "dev": "nodemon src/server.ts",
+    "build": "tsc",
+    "sequelize": "sequelize",
+    "migrate": "sequelize db:migrate --config sequelize.config.js --models-path src/models --migrations-path db/migrations",
+    "seed": "npx sequelize-cli db:seed:all --config sequelize.config.js --models-path src/models --seeders-path db/seeders"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
     "dotenv": "^16.4.5",
@@ -21,6 +27,7 @@
     "sequelize": "^6.37.4"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
