--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "sequelize": "sequelize",
     "migrate": "sequelize db:migrate --config sequelize.config.js --models-path src/models --migrations-path db/migrations",
     "seed": "npx sequelize-cli db:seed:all --config sequelize.config.js --models-path src/models --seeders-path db/seeders",
-    "test": "cross-env NODE_ENV=test && npm run migrate && jest test --coverage"
+    "test": "NODE_ENV=test npm run migrate && jest --coverage -i"
   },
   "keywords": [],
   "author": "",
