--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "shelf-wise",
   "version": "1.0.0",
   "description": "ShelfWise is a library management system",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "start": "node dist/index.js",
+    "start": "node dist/src/server.js",
     "dev": "nodemon src/server.ts",
     "build": "tsc",
     "sequelize": "sequelize",
