--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-DATABASE_URI=postgres://user:password@localhost:5432/dbname
+DATABASE_URL=postgres://user:password@localhost:5432/dbname
 PORT=3000
 JWT_SECRET=YOUR_SECRET
