--- a/.env.test
+++ b/.env.test
@@ -1,3 +1,3 @@
-DATABASE_URI=postgres://postgres:postgres@localhost:5432/shelfwise_test
+DATABASE_URL=postgres://postgres:postgres@localhost:5432/shelfwise_test
 PORT=3000
 JWT_SECRET=MY_SECRET
