--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "start": "node dist/src/server.js",
     "dev": "nodemon src/server.ts",
     "build": "tsc",
-    "sequelize": "sequelize",
-    "migrate": "sequelize db:migrate --config sequelize.config.js --models-path src/models --migrations-path db/migrations",
-    "seed": "npx sequelize-cli db:seed:all --config sequelize.config.js --models-path src/models --seeders-path db/seeders",
-    "test": "NODE_ENV=test npm run migrate && jest -i"
+    "test": "NODE_ENV=test npm run migrate && jest -i",
+    "knex": "knex",
+    "migrate": "knex migrate:latest",
+    "migrate:rollback": "knex migrate:rollback",
+    "seed": "knex seed:run"
+
   },
   "keywords": [],
   "author": "",
@@ -23,6 +25,7 @@
     "express": "^4.21.1",
     "express-validator": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
+    "knex": "^3.1.0",
     "pg": "^8.13.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.4",
@@ -35,12 +38,14 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.13",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/knex": "^0.16.1",
     "@types/node": "^22.7.7",
+    "@types/pg": "^8.11.10",
     "@types/supertest": "^6.0.2",
-    "cross-env": "^7.0.3",
-    "jest": "^29.7.0",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.6",
+    "cross-env": "^7.0.3",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.7",
     "sequelize-cli": "^6.6.2",
     "supertest": "^7.0.0",
