--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 DATABASE_URL=postgres://user:password@localhost:5432/dbname
+TEST_DATABASE_URL=postgres://user:password@localhost:5432/dbname_test
 PORT=3000
 JWT_SECRET=YOUR_SECRET
