--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,4 +25,9 @@ jobs:
         run: npm install
 
       - name: Run unit tests
+        env:
+          - DATABASE_URL: ${{ secrets.DATABASE_URL }}
+          - TEST_DATABASE_URL: ${{ secrets.TEST_DATABASE_URL }}
+          - JWT_SECRET: ${{ secrets.JWT_SECRET }}
+          - PORT : ${{ secrets.PORT }}
         run: npm run test 
