--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,8 +26,8 @@ jobs:
 
       - name: Run unit tests
         env:
-          - DATABASE_URL: ${{ secrets.DATABASE_URL }}
-          - TEST_DATABASE_URL: ${{ secrets.TEST_DATABASE_URL }}
-          - JWT_SECRET: ${{ secrets.JWT_SECRET }}
-          - PORT : ${{ secrets.PORT }}
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
+          TEST_DATABASE_URL: ${{ secrets.TEST_DATABASE_URL }}
+          JWT_SECRET: ${{ secrets.JWT_SECRET }}
+          PORT: ${{ secrets.PORT }}
         run: npm run test 
